Agregué archivos base, que tomé de los tutoriales de Bootstrap para poder tener un buen archivo base para hacer páginas a futuro... Esto incluye los css y el js y el block.html se relaciona con esos archivos, es decir, linkea

--- a/block.html
+++ b/block.html
@@ -3,10 +3,31 @@
     
 <head>
   <meta charset="UTF-8">
-  <title>Estudio Dilema</title>
-  <link rel="icon" href="_assets/dilemafav.ico">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="_css/styles.css">
-  <script src="_js/prefixfree.min.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>    
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Tracking Envío #134AZ</title>
+</head>  
+  
+  
+<body>
+<div class="container">
+<header>
+<div class="row"> 
+<h1 class="col col-xs-10 col">Tracking del envío #134AZ</h1></div> 
+</header>  
+  
+  
+  
+</div> <!-- Container -->  
+  
+<script src="js/jquery.slim.min.js"></script>
+<script src="js/tether.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/scripts.js"></script>  
+  
+</body>
+  
+</html>  
