--- a/block.html
+++ b/block.html
@@ -13,11 +13,31 @@
   
   
 <body>
-<div class="container">
-<header>
-<div class="row"> 
-<h1 class="col col-xs-10 col">Tracking del envío #134AZ</h1></div> 
-</header>  
+
+<div class="container text-center">
+  
+  <header>
+    <div class="row"> 
+      <h3 class="mt-4 col col-xs-10 text-center">Tracking del envío #134AZ</h3>
+    </div> <!--Row-->
+  </header>  
+  
+  <img class="img-fluid my-4" src="assets/carro.png">
+  <h6>Placa del vehículo</h6>
+  <h3 class="font-weight-bold">SMK 716</h3>
+  <dl>
+  <dt class="pb-2">___________________</dt>    
+  <dt>Marca del vehículo</dt>
+  <dd>Chevrolet </dd>
+  <dt>___________________</dt>  
+  
+  </dl>
+  
+  
+  
+  
+  
+  
   
   
   
