Adición de datos del vehículo para el blockchain

--- a/index.html
+++ b/index.html
@@ -21,18 +21,28 @@
       <h3 class="mt-4 col col-xs-10 text-center">Tracking del envío #134AZ</h3>
     </div> <!--Row-->
   </header>  
-  
-  <img class="img-fluid my-4" src="assets/carro.png">
-  <h6>Placa del vehículo</h6>
+ 
+  <img class="img-fluid my-4 col-9" src="assets/carro.png">
+   <hr/>
+  <h4 class="pt-1 text-caption">Placa del vehículo</h4>
   <h3 class="font-weight-bold">SMK 716</h3>
+   <hr/>
+  <h4 class="pt-1 text-caption">Datos del vehículo</h4>
   <dl>
-  <dt class="pb-2">___________________</dt>    
-  <dt>Marca del vehículo</dt>
-  <dd>Chevrolet </dd>
-  <dt>___________________</dt>  
-  
+    <dt class="text-uppercase">Marca del vehículo</dt>
+    <dd>Chevrolet </dd>
+    <dt class="text-uppercase">Modelo</dt>
+    <dd>2010</dd>
+    <dt class="text-uppercase">Propietario</dt>
+    <dd><strong>Beltrán Matallana </strong> José de Jesús</dd>
+    <dt class="text-uppercase">Documento de Identidad</dt>
+    <dd>7319239</dd>
+    <dt class="text-uppercase">Número de contacto</dt>
+    <dd>3168664503</dd>
+    <dt><a class="bg-success p-2 text-white" href="llamada.html" >Llamar</a></dt>
+
   </dl>
-  
+   <hr/>
   
   
   
