--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
   
   <header>
     <div class="row"> 
-      <h3 class="mt-4 col col-xs-10 text-center">Tracking del envío #134AZ</h3>
+      <h3 class="bg-info text-white py-4  col col-xs-10 text-center">Tracking del envío #134AZ</h3>
     </div> <!--Row-->
   </header>  
  
   <img class="img-fluid my-4 col-9" src="assets/carro.png">
    <hr/>
-  <h4 class="pt-1 text-caption">Placa del vehículo</h4>
+  <h3 class="pt-1 text-caption">Placa del vehículo</h3>
   <h3 class="font-weight-bold">SMK 716</h3>
    <hr/>
-  <h4 class="pt-1 text-caption">Datos del vehículo</h4>
-  <dl>
+  <h3 class="pt-1 text-caption">Datos del vehículo</h3>
+  <dl> <!--Información del carro -->
     <dt class="text-uppercase">Marca del vehículo</dt>
     <dd>Chevrolet </dd>
     <dt class="text-uppercase">Modelo</dt>
@@ -39,12 +39,33 @@
     <dd>7319239</dd>
     <dt class="text-uppercase">Número de contacto</dt>
     <dd>3168664503</dd>
-    <dt><a class="bg-success p-2 text-white" href="llamada.html" >Llamar</a></dt>
-
-  </dl>
+    <dt class="mt-4"><a class="bg-success p-2 text-white" href="llamada.html" >Llamar propietario</a></dt>
+  </dl> <!--Información del carro -->
    <hr/>
   
-  
+  <h3 class="pt-1 text-caption">Información del viaje</h3>
+  <img class="img-fluid col-11 pb-4" src="assets/viaje.gif">
+  <dl> <!--Información del viaje -->
+    <dt class="text-uppercase">Remitente</dt>
+    <dd>Green Food S.A.S.</dd>
+    <dt class="text-uppercase">Contacto en el origen</dt>
+    <dd>Sandra González</dd>
+    <dt class="text-uppercase">Lugar de origen</dt>
+    <dd>Cartagena de Indias</dd>
+    <dd><a class="text-info" href="https://www.google.com.co/maps/place/Zona+Franca+de+La+Candelaria/@10.3307767,-75.492718,15.83z/data=!4m8!1m2!2m1!1skm+9+zona+franca+cartagena!3m4!1s0x8ef627ae5fd53eab:0x3e8c80d730bb9484!8m2!3d10.3251523!4d-75.4899933?hl=en">KM 9 ZONA FRANCA La Candelaria</a></dd>
+    <dt class="text-uppercase">Dirección what3words en origen</dt>
+    <dd><a class="text-info" href="https://map.what3words.com/acuda.entramos.informe">acuda.entramos.informe</a></dd>
+    <dt class="text-uppercase">Destinatario</dt>
+    <dd>Green Food S.A.S.</dd>
+    <dt class="text-uppercase">Contacto en el destino</dt>
+    <dd>Pedro Pérez</dd>
+    <dt class="text-uppercase">Destino del envío</dt>
+    <dd>Bogotá D.C.</dd>
+    <dd><a class="text-info" href="https://www.google.com.co/maps/place/Cl.+95+%2369b-57,+Bogotá/@4.6900641,-74.0810787,17z/data=!3m1!4b1!4m5!3m4!1s0x8e3f9b20ec2ee3ab:0x366a6aa5b406fdb2!8m2!3d4.6900588!4d-74.07889?hl=en">Cll 95 69B - 57</a></dd>
+    <dt class="text-uppercase">Dirección what3words en destino</dt>
+    <dd><a class="text-info" href="https://map.what3words.com/pipas.gran.aguas">pipas.gran.aguas</a></dd>
+  </dl> <!--Información del viaje -->
+  <hr/>
   
   
   
