Se agregó la información de mercancía
Se subieron también los archivos pdf en los que salen las remesas, manifiestos y órdenes de cargue

--- a/index.html
+++ b/index.html
@@ -40,11 +40,19 @@
     <dt class="text-uppercase">Número de contacto</dt>
     <dd>3168664503</dd>
     <dt class="mt-4"><a class="bg-success p-2 text-white" href="llamada.html" >Llamar propietario</a></dt>
+    <dt class="mt-4 text-uppercase">Conductor</dt>
+    <dd><strong>Beltrán Pérez </strong> Camilo Andrés</dd>
+    <dt class="text-uppercase">Documento de Identidad</dt>
+    <dd>103456432</dd>
+    <dt class="text-uppercase">Número de contacto</dt>
+    <dd>3103503214</dd>
+    <dt class="mt-4"><a class="bg-success p-2 text-white" href="llamada.html" >Llamar conductor</a></dt>
+    
   </dl> <!--Información del carro -->
    <hr/>
   
   <h3 class="pt-1 text-caption">Información del viaje</h3>
-  <img class="img-fluid col-11 pb-4" src="assets/viaje.gif">
+  <img class="img-fluid col-11 py-4" src="assets/viaje.gif">
   <dl> <!--Información del viaje -->
     <dt class="text-uppercase">Remitente</dt>
     <dd>Green Food S.A.S.</dd>
@@ -67,8 +75,25 @@
   </dl> <!--Información del viaje -->
   <hr/>
   
-  
-  
+  <h3 class="pt-1 text-caption">Información de la mercancía</h3>
+  <img class="img-fluid col-8 py-4" src="assets/caja.png">
+  <dl> <!--Información de la mercancía -->
+  <dt class="text-uppercase">Número de remesa</dt>
+    <dd><a class="text-success" href="assets/remesa1680.pdf">1680</a></dd>
+  <dt class="text-uppercase">Número de manifiesto</dt>
+    <dd><a class="text-success" href="assets/manifiesto1685.pdf">1685</a></dd>
+  <dt class="text-uppercase">Número de orden de cargue</dt>
+    <dd><a class="text-success" href="assets/orden_cargue1667.pdf">1667</a></dd>
+   <dt class="text-uppercase">Tipo de empaque</dt>
+    <dd>Caja Plegadiza</dd>
+   <dt class="text-uppercase">Cantidad</dt>
+    <dd>320 latas</dd>
+   <dt class="text-uppercase">Peso en toneladas</dt>
+    <dd>1.68</dd>
+   <dt class="text-uppercase">Contenido</dt>
+    <dd>Cerveza</dd>
+  </dl> <!--Información de la mercancía -->
+ <hr/>
   
   
   
