Se les puso target="_blank" a los links de la carga

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
   <img class="img-fluid col-8 py-4" src="assets/caja.png">
   <dl> <!--Información de la mercancía -->
   <dt class="text-uppercase">Número de remesa</dt>
-    <dd><a class="text-success" href="assets/remesa1680.pdf">1680</a></dd>
+    <dd><a class="text-success" href="assets/remesa1680.pdf" target="_blank">1680</a></dd>
   <dt class="text-uppercase">Número de manifiesto</dt>
-    <dd><a class="text-success" href="assets/manifiesto1685.pdf">1685</a></dd>
+    <dd><a class="text-success" href="assets/manifiesto1685.pdf" target="_blank">1685</a></dd>
   <dt class="text-uppercase">Número de orden de cargue</dt>
-    <dd><a class="text-success" href="assets/orden_cargue1667.pdf">1667</a></dd>
+    <dd><a class="text-success" href="assets/orden_cargue1667.pdf" target="_blank">1667</a></dd>
    <dt class="text-uppercase">Tipo de empaque</dt>
     <dd>Caja Plegadiza</dd>
    <dt class="text-uppercase">Cantidad</dt>
