--- a/index.html
+++ b/index.html
@@ -95,8 +95,38 @@
   </dl> <!--Información de la mercancía -->
  <hr/>
   
+  <h3 class="py-3 text-caption">Novedades</h3>
+  <ul class="list-unstyled text-left">
+    <li class="font-weight-bold">17:02 05/08/2017</li>  
+    <li class="text-warning">Trancón en el camino. El envío se retrasará en aproximadamente 40 minutos. <br/> Hora estimada de llegada: 5:16 06/08/2017</li>  
+    <hr/>
+    <li class="font-weight-bold">17:02 05/08/2017</li>  
+    <li>Pago del peaje de salida de Cartagena <span class="text-info">Valor $7.200.</span></li>  
+    <hr/>
+    <li class="font-weight-bold">15:15 05/08/2017</li>  
+    <li>Conductor inicia recorrido. <span class="text-primary">Revisar satelital</span></li>  
+    <hr/> 
+    <li class="font-weight-bold">15:10 05/08/2017</li>  
+    <li>Generación exitosa del manifiesto. <span class="text-info">Manifiesto número 1685.</span></li>  
+    <hr/>    
+    <li class="font-weight-bold">15:00 05/08/2017</li>  
+    <li>Entrega de mercancía al conductor por parte de <span class="text-info">Sandra González</span> en <span class="text-info">acuda.entramos.infome</span></li>  
+    <hr/>     
+    <li class="font-weight-bold">14:38 05/08/2017</li>  
+    <li>Orden de cargue entregada al conductor. <span class="text-info">Número de orden 1667</span></li>  
+    <hr/>   
+    <li class="font-weight-bold">14:38 05/08/2017</li>  
+    <li class="text-warning">Pago de anticipo a conductor en Trifit S.A.</li>  
+    <hr/>   
+    <li class="font-weight-bold">14:33 05/08/2017</li>  
+    <li class="text-success">Conductor del viaje correcto en todos los documentos</li>  
+    <hr/>  
+    <li class="font-weight-bold">13:43 05/08/2017</li>  
+    <li class="text-danger">¡ERROR! Conductor del viaje, diferente a conductor registrado en la orden de cargue</li>
+
   
   
+  </ul>
 </div> <!-- Container -->  
   
 <script src="js/jquery.slim.min.js"></script>
