Creación de hojas de vida de conductores
Se cambiaron los botones de "llamar" por "Hoja de vida", se crearon dos html, uno con la información del conductor y otra con la información del propietario. Se cambiaron los links a target="_blank" en todas las instancias y se agregaron nuevos assets para el funcionamiento de las páginas del conductor y del propietario.

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     <dd>7319239</dd>
     <dt class="text-uppercase">Número de contacto</dt>
     <dd>3168664503</dd>
-    <dt class="mt-4"><a class="bg-success p-2 text-white" href="llamada.html" >Llamar propietario</a></dt>
+    <dt class="mt-4"><a target="_blank" class="bg-success p-2 text-white" href="hdv_propietario.html" >Hoja de vida propietario</a></dt>
     <dt class="mt-4 text-uppercase">Conductor</dt>
     <dd><strong>Beltrán Pérez </strong> Camilo Andrés</dd>
     <dt class="text-uppercase">Documento de Identidad</dt>
     <dd>103456432</dd>
     <dt class="text-uppercase">Número de contacto</dt>
     <dd>3103503214</dd>
-    <dt class="mt-4"><a class="bg-success p-2 text-white" href="llamada.html" >Llamar conductor</a></dt>
+    <dt class="mt-4"><a class="bg-success p-2 text-white" href="hdv_conductor.html" target="_blank" >Hoja de vida conductor</a></dt>
     
   </dl> <!--Información del carro -->
    <hr/>
@@ -60,18 +60,18 @@
     <dd>Sandra González</dd>
     <dt class="text-uppercase">Lugar de origen</dt>
     <dd>Cartagena de Indias</dd>
-    <dd><a class="text-info" href="https://www.google.com.co/maps/place/Zona+Franca+de+La+Candelaria/@10.3307767,-75.492718,15.83z/data=!4m8!1m2!2m1!1skm+9+zona+franca+cartagena!3m4!1s0x8ef627ae5fd53eab:0x3e8c80d730bb9484!8m2!3d10.3251523!4d-75.4899933?hl=en">KM 9 ZONA FRANCA La Candelaria</a></dd>
+    <dd><a target="_blank" class="text-info" href="https://www.google.com.co/maps/place/Zona+Franca+de+La+Candelaria/@10.3307767,-75.492718,15.83z/data=!4m8!1m2!2m1!1skm+9+zona+franca+cartagena!3m4!1s0x8ef627ae5fd53eab:0x3e8c80d730bb9484!8m2!3d10.3251523!4d-75.4899933?hl=en">KM 9 ZONA FRANCA La Candelaria</a></dd>
     <dt class="text-uppercase">Dirección what3words en origen</dt>
-    <dd><a class="text-info" href="https://map.what3words.com/acuda.entramos.informe">acuda.entramos.informe</a></dd>
+    <dd><a target="_blank" class="text-info" href="https://map.what3words.com/acuda.entramos.informe">acuda.entramos.informe</a></dd>
     <dt class="text-uppercase">Destinatario</dt>
     <dd>Green Food S.A.S.</dd>
     <dt class="text-uppercase">Contacto en el destino</dt>
     <dd>Pedro Pérez</dd>
     <dt class="text-uppercase">Destino del envío</dt>
     <dd>Bogotá D.C.</dd>
-    <dd><a class="text-info" href="https://www.google.com.co/maps/place/Cl.+95+%2369b-57,+Bogotá/@4.6900641,-74.0810787,17z/data=!3m1!4b1!4m5!3m4!1s0x8e3f9b20ec2ee3ab:0x366a6aa5b406fdb2!8m2!3d4.6900588!4d-74.07889?hl=en">Cll 95 69B - 57</a></dd>
+    <dd><a target="_blank" class="text-info" href="https://www.google.com.co/maps/place/Cl.+95+%2369b-57,+Bogotá/@4.6900641,-74.0810787,17z/data=!3m1!4b1!4m5!3m4!1s0x8e3f9b20ec2ee3ab:0x366a6aa5b406fdb2!8m2!3d4.6900588!4d-74.07889?hl=en">Cll 95 69B - 57</a></dd>
     <dt class="text-uppercase">Dirección what3words en destino</dt>
-    <dd><a class="text-info" href="https://map.what3words.com/pipas.gran.aguas">pipas.gran.aguas</a></dd>
+    <dd><a target="_blank" class="text-info" href="https://map.what3words.com/pipas.gran.aguas">pipas.gran.aguas</a></dd>
   </dl> <!--Información del viaje -->
   <hr/>
   
