Cambiar todos los links a "text-primary" y agregar links para los números de celular

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     <dt class="text-uppercase">Documento de Identidad</dt>
     <dd>7319239</dd>
     <dt class="text-uppercase">Número de contacto</dt>
-    <dd>3168664503</dd>
+    <dd><a href="tel:+573168664503">3168664503</a></dd>
     <dt class="mt-4"><a target="_blank" class="bg-success p-2 text-white" href="hdv_propietario.html" >Hoja de vida propietario</a></dt>
     <dt class="mt-4 text-uppercase">Conductor</dt>
     <dd><strong>Beltrán Pérez </strong> Camilo Andrés</dd>
     <dt class="text-uppercase">Documento de Identidad</dt>
     <dd>103456432</dd>
     <dt class="text-uppercase">Número de contacto</dt>
-    <dd>3103503214</dd>
+    <dd><a href="tel:+573103503214">3103503214</a></dd>
     <dt class="mt-4"><a class="bg-success p-2 text-white" href="hdv_conductor.html" target="_blank" >Hoja de vida conductor</a></dt>
     
   </dl> <!--Información del carro -->
@@ -58,20 +58,24 @@
     <dd>Green Food S.A.S.</dd>
     <dt class="text-uppercase">Contacto en el origen</dt>
     <dd>Sandra González</dd>
+    <dt class="text-uppercase">Número de contacto en origen</dt>
+    <dd><a href="tel:+573505402777">3505402777</a></dd>
     <dt class="text-uppercase">Lugar de origen</dt>
     <dd>Cartagena de Indias</dd>
-    <dd><a target="_blank" class="text-info" href="https://www.google.com.co/maps/place/Zona+Franca+de+La+Candelaria/@10.3307767,-75.492718,15.83z/data=!4m8!1m2!2m1!1skm+9+zona+franca+cartagena!3m4!1s0x8ef627ae5fd53eab:0x3e8c80d730bb9484!8m2!3d10.3251523!4d-75.4899933?hl=en">KM 9 ZONA FRANCA La Candelaria</a></dd>
+    <dd><a target="_blank" class="text-primary" href="https://www.google.com.co/maps/place/Zona+Franca+de+La+Candelaria/@10.3307767,-75.492718,15.83z/data=!4m8!1m2!2m1!1skm+9+zona+franca+cartagena!3m4!1s0x8ef627ae5fd53eab:0x3e8c80d730bb9484!8m2!3d10.3251523!4d-75.4899933?hl=en">KM 9 ZONA FRANCA La Candelaria</a></dd>
     <dt class="text-uppercase">Dirección what3words en origen</dt>
-    <dd><a target="_blank" class="text-info" href="https://map.what3words.com/acuda.entramos.informe">acuda.entramos.informe</a></dd>
+    <dd><a target="_blank" class="text-primary" href="https://map.what3words.com/acuda.entramos.informe">acuda.entramos.informe</a></dd>
     <dt class="text-uppercase">Destinatario</dt>
     <dd>Green Food S.A.S.</dd>
     <dt class="text-uppercase">Contacto en el destino</dt>
     <dd>Pedro Pérez</dd>
+    <dt class="text-uppercase">Número de Contacto en destino</dt>
+    <dd><a href="tel:+573505222777">3505222777</a></dd>
     <dt class="text-uppercase">Destino del envío</dt>
     <dd>Bogotá D.C.</dd>
-    <dd><a target="_blank" class="text-info" href="https://www.google.com.co/maps/place/Cl.+95+%2369b-57,+Bogotá/@4.6900641,-74.0810787,17z/data=!3m1!4b1!4m5!3m4!1s0x8e3f9b20ec2ee3ab:0x366a6aa5b406fdb2!8m2!3d4.6900588!4d-74.07889?hl=en">Cll 95 69B - 57</a></dd>
+    <dd><a target="_blank" class="text-primary" href="https://www.google.com.co/maps/place/Cl.+95+%2369b-57,+Bogotá/@4.6900641,-74.0810787,17z/data=!3m1!4b1!4m5!3m4!1s0x8e3f9b20ec2ee3ab:0x366a6aa5b406fdb2!8m2!3d4.6900588!4d-74.07889?hl=en">Cll 95 69B - 57</a></dd>
     <dt class="text-uppercase">Dirección what3words en destino</dt>
-    <dd><a target="_blank" class="text-info" href="https://map.what3words.com/pipas.gran.aguas">pipas.gran.aguas</a></dd>
+    <dd><a target="_blank" class="text-primary" href="https://map.what3words.com/pipas.gran.aguas">pipas.gran.aguas</a></dd>
   </dl> <!--Información del viaje -->
   <hr/>
   
@@ -79,11 +83,11 @@
   <img class="img-fluid col-8 py-4" src="assets/caja.png">
   <dl> <!--Información de la mercancía -->
   <dt class="text-uppercase">Número de remesa</dt>
-    <dd><a class="text-success" href="assets/remesa1680.pdf" target="_blank">1680</a></dd>
+    <dd><a class="text-primary" href="assets/remesa1680.pdf" target="_blank">1680</a></dd>
   <dt class="text-uppercase">Número de manifiesto</dt>
-    <dd><a class="text-success" href="assets/manifiesto1685.pdf" target="_blank">1685</a></dd>
+    <dd><a class="text-primary" href="assets/manifiesto1685.pdf" target="_blank">1685</a></dd>
   <dt class="text-uppercase">Número de orden de cargue</dt>
-    <dd><a class="text-success" href="assets/orden_cargue1667.pdf" target="_blank">1667</a></dd>
+    <dd><a class="text-primary" href="assets/orden_cargue1667.pdf" target="_blank">1667</a></dd>
    <dt class="text-uppercase">Tipo de empaque</dt>
     <dd>Caja Plegadiza</dd>
    <dt class="text-uppercase">Cantidad</dt>
