Cambiar referencia del camión

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <h3 class="pt-1 text-caption">Datos del vehículo</h3>
   <dl> <!--Información del carro -->
     <dt class="text-uppercase">Marca del vehículo</dt>
-    <dd>Chevrolet </dd>
+    <dd>Chevrolet <br/> <span class="font-italic">NKR Largo Reward Euro IV</span> </dd>
     <dt class="text-uppercase">Modelo</dt>
     <dd>2010</dd>
     <dt class="text-uppercase">Propietario</dt>
