Agregar emisiones de carbono

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
     <dd>1.68</dd>
    <dt class="text-uppercase">Contenido</dt>
     <dd>Cerveza</dd>
+    <dt class="text-uppercase">Emisiones de Co2</dt>
+    <dd>16.75 kg CO2(WtW)</dd>
   </dl> <!--Información de la mercancía -->
  <hr/>
   
