--- a/index.html
+++ b/index.html
@@ -143,3 +143,5 @@
 </body>
   
 </html>  
+
+<!-- Este código es propiedad de Estudio Dilema 2017 y sólo podrá ser usado con fines no-comerciales por parte de los clientes. Al estar disponible el código en github, Dilema se reserva todos los derechos de eliminar éste en caso de que se considere necesario -->
